tests/machine/x/st/slice.out
1
Object: Array new: 3 "<0x7f6680817ee0>" error: Invalid index 0: index out of range
SystemExceptions.IndexOutOfRange(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.IndexOutOfRange class>>signalOn:withIndex: (SysExcept.st:660)
Array(Object)>>checkIndexableBounds: (Object.st:796)
Array(Object)>>at: (Object.st:858)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/slice.st:2)
$h