tests/machine/x/st/slice.st
Transcript show: ({1. 2. 3} at: 1) printString; cr.
Transcript show: ({1. 2. 3} at: 0) printString; cr.
Transcript show: ('hello' at: 1) printString; cr.
